--- a/shopping.html
+++ b/shopping.html
@@ -26,8 +26,16 @@
             </ul>
         </div>
         <div class="main">
-            <div class="container">
-                
+            <div class="container" style="flex-direction: row;">
+                <div class="filter_block">
+                    <h2 style="margin-left: 10px; margin-bottom: 20px;">Поставщики</h2>
+                    <ul>
+                        
+                    </ul>
+                </div>
+                <div class="products_block">
+
+                </div>
             </div>
         </div>
 
@@ -124,7 +132,11 @@
             <div class="close_line" id="close_menu">×</div>
             <div class="page_menu">
                 <ul>
-                    <a href=""><li>Каталог товаров</li></a>
+                    <li id="provider_li">Каталог товаров <span>-</span>
+                        <ul>
+
+                        </ul>
+                    </li>
                     <a href="/"><li>Оплата заказов</li></a>
                     <a href="/info"><li>Доставка и оплата</li></a>
                     <a href="/contacts"><li>Контакты</li></a>
