--- a/delivery_info.html
+++ b/delivery_info.html
@@ -112,12 +112,10 @@
         <div class="modal_back" style="display: none;">
             <div class="modal_window">
                 <div class="close_modal_line">
-                    <div class="show_form_city" style="display: none;">Показать форму ввода города</div>
                     <div class="close_elips">×</div>
                 </div>
                 <div class="head_modal">
-                    <input type="text" id="modal_city" placeholder="Введите город доставки">
-                    <button class="modal_button" id="show_boxberry_map">Показать</button>
+                    <h2>Пишите свой Город или Адрес в строке поиска на карте</h2>
                 </div>
                 <div id="boxberry_map">
 
@@ -139,8 +137,8 @@
     </body>
     <script src="/javascripts/jquery.min.js"></script>
     <script src="/javascripts/jquery.inputmask.bundle.js"></script>
-    <script src="/javascripts/script.js"></script>
     <script type="text/javascript"src="http://points.boxberry.ru/js/boxberry.js"></script>
+    <script src="/javascripts/script.js"></script>
 </html>
 
 <script>
