--- a/admin.html
+++ b/admin.html
@@ -74,12 +74,12 @@
                     <div class="close_elips" id="close_info_prod">×</div>
                     <p hidden id="id_prod"></p>
                 </div>
-                <div class="body_pr_info">
+                <div class="body_pr_info" style="overflow: auto;">
                     <div class="pr_info_left">
                         <h3>Поставщик товара</h3>
                         <input type="text" class="big_input" id="providerProduct" placeholder="Поставщик товара">
                         <h3>Название товара</h3>
-                        <input type="text" class="big_input" id="nameProduct" placeholder="Название товара">
+                        <input type="text" class="big_input" id="nameProduct" placeholder="Название товара" readonly>
                         <div class="pr_info_foto">
 
                         </div>
