--- a/contacts.html
+++ b/contacts.html
@@ -27,7 +27,7 @@
     <div class="main">
         <div class="container">
             <div class="block_info">
-                <div class="title" style="text-align: center;">Контакты</div>
+                <div class="title" style="text-align: center;">Контакты-</div>
                 <div class="sub_title">Контактная информация:</div>
                 <div class="block_text_dpi">
                     Для связи с Организатором необходимо написать в Директ профиля закупки:<br>
