--- a/contacts.html
+++ b/contacts.html
@@ -39,6 +39,24 @@
                 </div>
             </div>
         </div>
+        <div class="container">
+            <div class="block_info">
+                <div class="sub_title">Реквизиты:</div>
+                <div class="block_text_dpi">
+                    Индивидуальный предприниматель<br>
+                    Кирюшиина Татьяна Андреевна<br><br>
+                    ИНН 482413391104<br>
+                    ОГРНИП 319502700112387<br>
+                    Юр. Адрес: Московская область Ленинский район, п. Мещерино мкр.
+Южные горки, Квартал 6 д. 45 кв. 4б<br>
+                    Фактический адрес: г. Москва ул. 2-ая Машиностроения д. 17 стр1 офис. 306<br><br>
+                    р/c 40802810038000173615<br>
+                    В ПАО Сбербанк<br>
+                    БИК 044525225<br>
+                    Кор.счет 30101810400000000225
+                </div>
+            </div>
+        </div>
     </div>
     <div class="page_menu_main" style="display: none;">
         <div class="close_line" id="close_menu">×</div>
