--- a/contacts.html
+++ b/contacts.html
@@ -46,7 +46,7 @@
         <div class="container">
             <div class="block_info">
                 <div class="title" style="text-align: center;">Контакты</div>
-                <div class="sub_title test">Контактная информация:</div>
+                <div class="sub_title">Контактная информация:</div>
                 <div class="block_text_dpi">
                     Для связи с Организатором необходимо написать в Директ профиля закупки:<br>
                     <br>
