--- a/contacts.html
+++ b/contacts.html
@@ -30,7 +30,7 @@
                 <div class="sub_title">Реквизиты:</div>
                 <div class="block_text_dpi">
                     Индивидуальный предприниматель<br>
-                    Кирюшиина Татьяна Андреевна<br><br>
+                    Кирюшина Татьяна Андреевна<br><br>
                     ИНН 482413391104<br>
                     ОГРНИП 319502700112387<br>
                     Юр. Адрес: Московская область Ленинский район, п. Мещерино мкр.
