--- a/admin.html
+++ b/admin.html
@@ -84,12 +84,12 @@
 
                         </div>
                         <div class="all_foto">
-                            <div class="all_item">
+                            <!--<div class="all_item">
                                 <label for="upload_foto_node" class="modal_button" id="upload_foto">
                                     <input type="file" id="upload_foto_node" id="file" name="file" accept="image/jpeg,image/png,image/gif">
                                     +
                                 </label>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                     <div class="pr_info_right" style="margin-top: 0px;">
